<resources>
    <string name="app_name">Vocabulary Practice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Cards</string>
    <string name="menu_myWords">My Words</string>
    <string name="menu_translate">My Words</string>

    <string name="txtV_OFY">Omer Faruk YILMAZ</string>
    <string name="txtV_MS">Mehmet SOYSAL</string>
    <string name="txtV_FA">Fatih AYKEMAT</string>

    <string name="txtV_PracticeThisDesk">Practice This Deck → -></string>
    <string name="txtV_tapToSee">Tap to see definition and example→ </string>

    <string name="textViewIKnow">✓ I knew this word </string>
    <string name="textViewIDontKnow">× I did not know this word</string>


    <string-array name="Level_title">
        <item>Common Words</item>
        <item>Easy Words</item>
        <item>Medium Words</item>
        <item>Hard Words</item>
    </string-array>


</resources>