<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="186dp"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/txtV_ProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/iceberg"
        android:text="Vocabulary Practice"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtV_OFY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/iceberg"
        android:text="@string/txtV_OFY"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtV_MS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/iceberg"
        android:text="@string/txtV_MS"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtV_FA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/iceberg"
        android:text="@string/txtV_FA"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>