<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".PracticeActivity"
    >

    <ProgressBar
        android:id="@+id/pBarLearning"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="394dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:max="30"
        android:progress="5"
        android:progressDrawable="@drawable/learning_pbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtP_Learning" />

    <TextView
        android:id="@+id/txtP_Learning"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="You are learning 30 out of 30 words"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pBarReviewing" />

    <ProgressBar
        android:id="@+id/pBarReviewing"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:max="30"
        android:progressDrawable="@drawable/reviewing_pbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtP_Reviewing"
        android:progress="15"/>

    <TextView
        android:id="@+id/txtP_Reviewing"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="You are reviewing 30 out of 30 words"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pBarMastered" />

    <TextView
        android:id="@+id/txttP_mastered"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="You have mastered 30 out of 30 words"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PracticeCard" />

    <ProgressBar
        android:id="@+id/pBarMastered"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="394dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:progress="10"
        android:max="30"
        android:progressDrawable="@drawable/mastered_pbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttP_mastered" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PracticeCard"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/my_card_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:gravity="center"
            android:text="Success"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtWordStatus"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtWordStatus"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="#DD776E"
            android:gravity="center"
            android:text="Learning"
            android:textColor="#C11C0F"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTapToSee"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/my_taptoseetext"
            android:gravity="center"
            android:text="@string/txtV_tapToSee"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWord"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtExplanation"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="verb: Achive something "
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/txtExample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWord"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtExample"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="The exam was so successfull"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/txtIDontKnow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtIKnow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/my_iknew"
            android:gravity="center"
            android:text="@string/textViewIKnow"
            android:textColor="#309834"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/txtIDontKnow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExample"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtIDontKnow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/my_idontknow"
            android:gravity="center"
            android:text="@string/textViewIDontKnow"
            android:textColor="#C11C0F"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>